@@ -1,3 +1,8 @@
+2007-05-29  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* unix/tclUnixThrd.c (Tcl_JoinThread): fix for 64-bit handling of
+	pthread_join exit return code storage. [Bug 1712723]
+
 2007-05-18  Don Porter  <dgp@users.sourceforge.net>
 
 	* unix/configure:	autoconf-2.59 (FC6 fork)
